# CubicGraphKaszonyiFunctionProgram

./: AdjListsGraphLoader.cpp  AdjListsGraphLoader.h  AutomatedSuppressionTester.cpp  AutomatedSuppressionTester.h  CMakeLists.txt  ColoringFinder.h  ColoringFinderFactor.cpp  ColoringFinderFactor.h  ColoringFinderSAT.cpp  ColoringFinderSAT.h  ContinuousSuppression.cpp  ContinuousSuppression.h  ControlParallelFormatPrinter.cpp  ControlParallelFormatPrinter.h  ControlSequentialFormatPrinter.cpp  ControlSequentialFormatPrinter.h  CubicGraph.cpp  CubicGraph.h  DirectoryReader.h  Edge.cpp  Edge.h  Enums.h  FileTester.cpp  FileTester.h  GraphExceptions.cpp  GraphExceptions.h  GraphLoader.cpp  GraphLoader.h  GraphLoaderAdjLists.cpp  GraphLoaderAdjLists.h  GraphLoaderIndexedAdjListsWithDescription.cpp  GraphLoaderIndexedAdjListsWithDescription.h  GraphLoaderSimpleAdjListsFormat.cpp  GraphLoaderSimpleAdjListsFormat.h  GraphPrinter.cpp  GraphPrinter.h  GraphPrinterParallelFormat.cpp  GraphPrinterParallelFormat.h  GraphPrinterSemestralProjectFormat.cpp  GraphPrinterSemestralProjectFormat.h  (+45 more)
ColoringFinder/: ColoringFinder.h  FactorColoringFinder.cpp  FactorColoringFinder.h  PDColoringFinder.cpp  PDColoringFinder.h  SATColoringFinder.cpp  SATColoringFinder.h
GraphLoader/: AdjListsGraphLoader.cpp  AdjListsGraphLoader.h  DescriptionAdjListsGraphLoader.cpp  DescriptionAdjListsGraphLoader.h  DirectoryReader.cpp  DirectoryReader.h  GraphLoader.cpp  GraphLoader.h
GraphPrinter/: GraphColoringsPrinter.cpp  GraphColoringsPrinter.h  GraphPrinter.cpp  GraphPrinter.h  KaszonyiPrinter.cpp  KaszonyiPrinter.h  KaszonyiPrinterOriginal.cpp  KaszonyiPrinterOriginal.h  KaszonyiPrinterTimesThree.cpp  KaszonyiPrinterTimesThree.h  ParallelPathPrinter.cpp  ParallelPathPrinter.h  ResistancePrinter.cpp  ResistancePrinter.h  SequentialPathPrinter.cpp  SequentialPathPrinter.h
Qt/: QtChooseFilesButton.cpp  QtChooseFilesButton.h  QtDirectoryWindow.cpp  QtDirectoryWindow.h  QtExitButton.cpp  QtFileList.cpp  QtFileWindow.cpp  QtFileWindow.h  QtGraphProgramManager.cpp  QtGraphProgramManager.h  QtMainWindow.cpp  QtMenuWindow.cpp  QtMenuWindow.h  QtOutputDirectoryButton.cpp  QtOutputDirectoryButton.h  QtRunButton.cpp  QtRunButton.h
Suppression/: ParallelSuppressionMemoized.cpp  ParallelSuppressionMemoized.h  ParallelSuppressionNaive.cpp  ParallelSuppressionNaive.h  SequentialSuppressionMemoized.cpp  SequentialSuppressionMemoized.h  SequentialSuppressionNaive.cpp  SequentialSuppressionNaive.h  Suppression.cpp  Suppression.h
Tests/: test27_16g3e.txt  test30_STRONG38.txt  test30_binSnark2.txt  test30_binSnark3.txt  test30_binSnark4.txt  test30_blanusa1.txt  test30_blanusa3.txt  test30_blanusa5.txt
