cmake_minimum_required(VERSION 3.17)
project(CubicGraphKaszonyiFunctionProgram)

set(CMAKE_CXX_STANDARD 14)

add_executable(CubicGraphKaszonyiFunctionProgram main.cpp Tests.cpp Tests.h Edge.cpp Edge.h GraphExceptions.cpp GraphExceptions.h CubicGraph.cpp CubicGraph.h KaszonyiFunction.h KaszonyiFactorFunction.cpp KaszonyiFactorFunction.h GraphLoader.h GraphLoaderAdjLists.cpp GraphLoaderAdjLists.h KaszonyiValuesPrinter.cpp KaszonyiValuesPrinter.h Enums.h GraphPrinter.h GraphPrinter.h ControlSequentialFormatPrinter.cpp ControlSequentialFormatPrinter.h GraphPrinter.cpp ContinuousSuppression.h SequentialSuppressionNaive.cpp SequentialSuppressionNaive.h ControlParallelFormatPrinter.cpp ControlParallelFormatPrinter.h ParallelSuppressionNaive.cpp ParallelSuppressionNaive.h SequentialSuppressionMemoized.cpp SequentialSuppressionMemoized.h Hash.h ContinuousSuppression.cpp ParallelSuppressionMemoized.cpp ParallelSuppressionMemoized.h AutomatedSuppressionTester.cpp AutomatedSuppressionTester.h ResistanceValuesPrinter.cpp ResistanceValuesPrinter.h)